name:                DobadoBots
version:             0.1.0.0
-- synopsis:
-- description:
homepage:            https://github.com/githubuser/DobadoBots#readme
license:             BSD3
license-file:        LICENSE
author:              Félix Baylac-Jacqué 
maintainer:          felix@alternativebit.fr 
copyright:           2017 Félix Baylac-Jacqué
category:            Games 
build-type:          Simple
extra-source-files:  README.md
cabal-version:       >=1.10

library
  hs-source-dirs:      src
  exposed-modules:     DobadoBots
  build-depends:       base >= 4.7 && < 5
                      ,text
  default-language:    Haskell2010
  other-modules:       DobadoBots.Interpreter.Data
                      ,DobadoBots.Interpreter.Interpreter

executable DobadoBots-exe
  hs-source-dirs:      app
  main-is:             Main.hs
  ghc-options:         -threaded -rtsopts -with-rtsopts=-N
  build-depends:       base
                     , DobadoBots
  default-language:    Haskell2010

test-suite DobadoBots-test
  type:                exitcode-stdio-1.0
  hs-source-dirs:      test
  main-is:             Spec.hs
  build-depends:       base
                     , DobadoBots
                     , file-embed
                     , hspec
  ghc-options:         -threaded -rtsopts -with-rtsopts=-N
  default-language:    Haskell2010
  other-modules:       DobadoBots.InterpreterSpec

source-repository head
  type:     git
  location: https://github.com/NinjaTrappeur/dobadobots
