name:                DobadoBots
version:             0.1.0.0
-- synopsis:
-- description:
homepage:            https://github.com/githubuser/DobadoBots#readme
license:             BSD3
license-file:        LICENSE
author:              Félix Baylac-Jacqué 
maintainer:          felix@alternativebit.fr 
copyright:           2017 Félix Baylac-Jacqué
category:            Games 
build-type:          Simple
extra-source-files:  README.md
cabal-version:       >=1.10

library
  hs-source-dirs:      src
  exposed-modules:     DobadoBots
  build-depends:       base >= 4.7 && < 5
                      ,text
                      ,parsec
                      ,linear
                      ,sdl2
                      ,sdl2-ttf
                      ,aeson
                      ,bytestring
                      ,unordered-containers
                      ,hashable
                      ,vector
                      ,containers
                      ,SGplus
                      ,mtl
                      ,pretty
                      ,extra
  default-language:    Haskell2010
  other-modules:       DobadoBots.Interpreter.Data
                      ,DobadoBots.Interpreter.Parser
                      ,DobadoBots.Interpreter.Interpreter
                      ,DobadoBots.Interpreter.PrettyPrinter
                      ,DobadoBots.GameEngine.Data
                      ,DobadoBots.GameEngine.LevelLoader
                      ,DobadoBots.GameEngine.GameEngine
                      ,DobadoBots.GameEngine.Collisions
                      ,DobadoBots.GameEngine.Utils
                      ,DobadoBots.Graphics.Window
                      ,DobadoBots.Graphics.Renderer
                      ,DobadoBots.Graphics.Editor
                      ,DobadoBots.Graphics.Utils
                      ,DobadoBots.Graphics.Data
                      ,DobadoBots.Graphics.Buttons
                      
executable DobadoBots-exe
  hs-source-dirs:      app
  main-is:             Main.hs
  ghc-options:         -threaded -rtsopts -with-rtsopts=-N
  build-depends:       base
                     , DobadoBots
                     , text
                     , sdl2
                     , extra
  default-language:    Haskell2010

test-suite DobadoBots-test
  type:                exitcode-stdio-1.0
  hs-source-dirs:      test
  main-is:             Spec.hs
  build-depends:       base >= 4.7 && < 5
                     , DobadoBots
                     , file-embed
                     , hspec
                     , hspec-expectations
                     , text
                     , linear
                     , containers
                     , unordered-containers
                     , sdl2
  ghc-options:         -threaded -rtsopts -with-rtsopts=-N
  default-language:    Haskell2010
  other-modules:       DobadoBots.ParserSpec
                     , DobadoBots.GameEngineSpec
                     , DobadoBots.InterpreterSpec
                     , DobadoBots.EditorSpec

source-repository head
  type:     git
  location: https://github.com/NinjaTrappeur/dobadobots
